Fullscreen auf der Landingpage

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
+        <activity
+            android:name=".LifeLoginWebPage"
+            android:label="@string/title_activity_life_login_web_page" >
+        </activity>
     </application>
 
 </manifest>
