--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.AppCompat" >
+            android:theme="@style/Theme.AppCompat.Light" >
         </activity>
         <activity
             android:name=".LifeLoginWebPage"
